--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,12 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root" class="root"></div>
+
+<!-- <script>
+  $(window).on("load", function() {
+    $(".loader-wrapper").fadeOut("slow");
+  });
+  </script> -->
+  
 </body>
 </html>
